Fix #1314, #1313 UI misaligned

--- a/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
+++ b/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
@@ -1205,10 +1205,9 @@ $breakpoint_tablet: 1200px;
 		}
 		body{
 			
-			
 			h1{
 			
-			font-size: 30px;
+			font-size: 36px;
 			font-weight:300;
 			
 			}
